--- a/src/styles/utils/common.scss
+++ b/src/styles/utils/common.scss
@@ -18,9 +18,11 @@ html {
 }
 
 body {
-  background: $color-white;
+  background-color: $color-white;
   color: $color-black;
-  font: 400 #{$font-size}/#{$line-height} #{$font-family};
+  font-family: $font-family;
+  font-size: $font-size;
+  line-height: $line-height;
   text-rendering: optimizeLegibility;
 }
 
@@ -29,7 +31,7 @@ body {
 }
 
 [role='button'] {
-  cursor: pointer // Коррекция для кликабельных элементов с указанной ролью в iOS;
+  cursor: pointer
 }
 
 [type='search']::-webkit-search-decoration {
@@ -43,8 +45,8 @@ input,
 label,
 select,
 textarea {
-  touch-action: manipulation; // Стилевая коррекция 300ms задержки (для поддерживающих браузеров)
-  margin: 0;                  // Убираем margin в Firefox и Safari
+  touch-action: manipulation;
+  margin: 0;
 }
 
 button,
@@ -75,7 +77,6 @@ button::-moz-focus-inner,
   border-style: none;
 }
 
-// Коррекция для Mobile Safari (https://github.com/twbs/bootstrap/issues/11266)
 input[type='date'],
 input[type='time'],
 input[type='datetime-local'],
@@ -91,8 +92,8 @@ input:not([type=checkbox]):not([type=radio]) {
 }
 
 textarea {
-  overflow: auto ;  // Удаление верт. скролла в IE.
-  resize: vertical; // Правильное изменение размеров
+  overflow: auto ;
+  resize: vertical;
 }
 
 svg {
@@ -101,7 +102,7 @@ svg {
   }
 
   &:not(:root) {
-    overflow: hidden; // Скрыть выступающее за границы в IE
+    overflow: hidden;
   }
 }
 
