--- a/src/ui/styles/lib/animations.scss
+++ b/src/ui/styles/lib/animations.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 
 // https://developer.mozilla.org/ru/docs/Web/CSS/animation
 // animation: 3s ease-in 1s 2 reverse both paused slidein
