--- a/src/ui/styles/lib/mixins/_text-mixins.scss
+++ b/src/ui/styles/lib/mixins/_text-mixins.scss
@@ -10,6 +10,12 @@
   overflow: hidden;
 }
 
+@mixin pseudo($content: '') {
+  display: block;
+  content: $content;
+  position: absolute;
+}
+
 @mixin placeholder {
   &::-webkit-input-placeholder {
     @content;
